<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/latitud"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvlatitud"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/longitud"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvLongitud"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textViewAltitud"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/altitud"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvAltitud"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/velocidad"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvVelocidad"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/curso"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvCurso"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/hora"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvHora"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comenzar"
            android:translationY="30dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>